ruby-defaults (1:2.0.0.2) UNRELEASED; urgency=medium

  * Remove Conflicts: irb, rdoc, rubygems; Add Provides: rubygems
    (Closes: #743780)

 -- Antonio Terceiro <terceiro@debian.org>  Sun, 06 Apr 2014 10:09:29 -0300

ruby-defaults (1:2.0.0.1) unstable; urgency=medium

  * Upload to unstable.

 -- Christian Hofstaedtler <zeha@debian.org>  Sun, 30 Mar 2014 17:03:01 +0200

ruby-defaults (1:2.0.0.1~exp3) experimental; urgency=medium

  * ruby-all-dev: migrate from Ruby 1.9.1 and 2.0 to Ruby 2.0 and 2.1
  * ruby: remove Breaks/Conflicts/Replaces against old interpreter packages
    as this will force the removal of old interpreters from users' systems
    (Closes: #740733)
    .
    The following upgrade scenarios from wheezy were tested, still work fine,
    and leave the old interpreters alone:
    - ruby
    - ruby + ruby1.8
    - ruby + apt-listbugs
    - ruby + ruby1.8 + apt-listbugs
    - ruby1.8 + apt-listbugs

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 29 Mar 2014 16:12:05 -0300

ruby-defaults (1:2.0.0.1~exp2) experimental; urgency=medium

  * Merge changes from unstable, for newer gem2deb.

 -- Christian Hofstaedtler <zeha@debian.org>  Tue, 04 Feb 2014 23:58:19 +0100

ruby-defaults (1:1.9.3.4) unstable; urgency=medium

  * ruby-all-dev: also depend on the actual interpreters and not only on the
    -dev packages
  * ruby-all-dev: ship library with data about supported interpreters
    - ruby_debian_dev.rb will be be used by gem2deb
  * Add a simple DEP-8 smoke test
  * Drop Conflicts/Replaces/Provides on obsolete packages that are not even on
    squeeze anymore

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 12 Feb 2014 09:33:39 -0300

ruby-defaults (1:1.9.3.3) unstable; urgency=medium

  * Breaks ruby-switch <= 0.1.0 and rbenv <= 0.4.0-1
    - the mention of `ruby-build` in the previous release was a typo.

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 06 Feb 2014 17:56:55 -0300

ruby-defaults (1:1.9.3.2) unstable; urgency=medium
