@@ -1,0 +1,2 @@
+interest /usr/bin/ruby1.8
+interest /usr/bin/ruby1.9.1
